syntax = "proto3";

option go_package = "prototype/.;prototype";

package rdo.service.types;

import "validate/validate.proto";

message BlockValue {
  uint64 num = 1;
  string hash = 2;
  string parent = 3;
  uint64 timestamp = 4;
  string proposer = 5;
  repeated string approvers = 6;
  repeated string slashers = 7;
  repeated TxValue transactions = 8;
}

message TxValue{
  uint64 num = 1;
  uint32 type = 2;
  uint64 timestamp = 3;
  string hash = 4 [(validate.rules).string.len = 66];
  uint64 fee = 5 [(validate.rules).uint64.gt = 0];
  bytes data = 6;
  repeated TxInputValue inputs = 7 [(validate.rules).repeated.min_items = 1];
  repeated TxOutputValue outputs = 8 [(validate.rules).repeated.min_items = 1];
}

message TxInputValue{
  string hash = 1 [(validate.rules).string.len = 66];
  uint32 index = 2;
  string address = 3 [(validate.rules).string.len = 42];
  uint64 amount = 4;
}

message TxOutputValue{
  string address = 1 [(validate.rules).string.len = 42];
  uint64 amount = 2;
  string node = 3 [(validate.rules).string.max_len = 42];
}

message SignedTxValue {
  TxValue data = 1;
  string signature = 2 [(validate.rules).string.len = 132];
}

message UTxO{
  uint64 blockNum = 1;
  string hash = 2;
  uint32 index = 3;
  string from = 4;
  string to = 5;
  string node = 6;
  uint64 amount = 7;
  uint64 timestamp = 8;
  uint32 txtype = 9;
}
